--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -8,7 +8,12 @@
         <h3>{{ product.name }}</h3>
         <p>${{ product.price }}</p>
         <button>Add to Cart</button>
-        <button onclick="window.location.href='{% url 'add_to_cart' product.id %}'">Add to Cart</button>
+        <!-- Correct Add to Cart button -->
+        <form action="{% url 'add_to_cart' product.id %}" method="POST">
+            {% csrf_token %}
+            <button type="submit">Add to Cart</button>
+        </form>
+
     </div>
     {% endfor %}
 </div>
